<resources>
    <string name="app_name">Navigation</string>
    <string name="nom">Nom et prenom</string>
    <string name="Email">Email</string>
    <string name="phone">Phone</string>
    <string name="Adresse">Adresse</string>
    <string name="ville">Ville</string>

    <string-array name="villes_array">
        <item>Paris</item>
        <item>Marrakech</item>
        <item>Casablanca</item>
        <item>Rabat</item>
        <item>Tanger</item>
        <item>Fes</item>
    </string-array>
</resources>
